# shadow-drive-rust

./: .rustfmt  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: dispatch-on-release.yml
app/: Cargo.toml
auth/: Cargo.toml
auth/src/: genesysgo_auth.rs  http_sender.rs  lib.rs
cli/: Cargo.toml  LICENSE.txt  README.md  sample_config.json
cli/examples/: rkyv.rs
cli/src/: lib.rs  main.rs  process.rs  state.rs  utils.rs
cli/src/cli/: mod.rs  process.rs
cli/src/command/: mod.rs
cli/src/command/drive/: mod.rs
cli/src/command/nft/: mod.rs  utils.rs
cli/src/command/nft/collection/: get.rs  init.rs  mod.rs  withdraw.rs
cli/src/command/nft/creator_group/: get.rs  init.rs  mod.rs
cli/src/command/nft/minter/: get.rs  init.rs  init_old.rs  mint.rs  mod.rs
drive/: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
py/: .rustfmt  Cargo.toml  README.md  pyproject.toml
py/examples/: end_to_end.py  full.py  immutable.py  simple_end_to_end.py  test.json
py/src/: lib.rs
py/tests/: client.py
runes/: Cargo.toml  aidan.runes
runes/examples/: create_test_runes.rs  use_cli_runes.rs  use_test_runes.rs
runes/src/: inscribe.rs  lib.rs
sdk/: Cargo.toml  README.md
sdk/example/: .gitignore  Cargo.toml
sdk/examples/: end_to_end.rs
sdk/examples/files/: alpha.txt  not_alpha.txt
sdk/src/: client.rs  derived_addresses.rs  error.rs  lib.rs  models.rs
sdk/src/client/: add_immutable_storage.rs  add_storage.rs  cancel_delete_storage_account.rs  claim_stake.rs  create_storage_account.rs  delete_file.rs  delete_storage_account.rs  edit_file.rs  get_storage_account.rs  list_objects.rs  make_storage_immutable.rs  migrate.rs  redeem_rent.rs  reduce_storage.rs  refresh_stake.rs  store_files.rs  top_up.rs  upload_multiple_files.rs
sdk/src/models/: payload.rs  storage_acct.rs
src/: client.rs  client_impl.rs  constants.rs  derived_addresses.rs  error.rs  lib.rs  models.rs
src/client/: add_immutable_storage.rs  add_storage.rs  cancel_delete_file.rs  cancel_delete_storage_account.rs  claim_stake.rs  create_storage_account.rs  delete_file.rs  delete_storage_account.rs  edit_file.rs  get_storage_account.rs  list_objects.rs  make_storage_immutable.rs  migrate.rs  redeem_rent.rs  reduce_storage.rs  store_files.rs  upload_file.rs  upload_multiple_files.rs
src/client_impl/: add_storage.rs  cancel_delete_file.rs  cancel_delete_storage_account.rs  claim_stake.rs  create_storage_account.rs  delete_file.rs  delete_storage_account.rs  edit_file.rs  get_storage_account.rs  list_objects.rs  make_storage_immutable.rs  reduce_storage.rs  request_delete_storage_account.rs  upload_file.rs  upload_multiple_files.rs
src/models/: payload.rs  storage_acct.rs
test_utilities/: Cargo.toml
test_utilities/src/: lib.rs
tests/: test_add_storage.rs  test_claim_stake.rs  test_get_storage_account.rs
user-staking/: CHANGELOG.md  Cargo.toml  README.md
user-staking/src/: constants.rs  errors.rs  lib.rs
user-staking/src/instructions/: bad_csam.rs  claim_stake.rs  crank.rs  decrease_storage.rs  delete_account.rs  increase_storage.rs  initialize_account.rs  initialize_config.rs  make_account_immutable.rs  migrate.rs  mod.rs  mutable_fees.rs  redeem_rent.rs  refresh_stake.rs  request_delete_account.rs  store_file.rs  unmark_delete_account.rs  update_account.rs  update_config.rs
user-staking/src/instructions/archive/: delete_file.rs  edit_file.rs  move_url.rs  request_delete_file.rs  store_file.rs  unmark_delete_file.rs
