[workspace]
members = [
    "sdk",
    "cli",
    "app",
    "py",
    "drive",
    "auth",
]

[workspace.package]
version = "0.6.2"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Tracy <tracy@tracycodes.com>"
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GenesysGo/shadow-drive-rust"
