[workspace]
members = [
    "sdk",
    "cli",
    "app",
    "py",
    "drive",
    "auth",
    "sdk/example"
]

[workspace.package]
version = "0.8.0"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Tracy <tracy@tracycodes.com>"
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GenesysGo/shadow-drive-rust"

[workspace.dependencies]
shadow-drive-sdk = { path = "sdk", version = "0.8.0"}
shadow-rpc-auth = { path = "auth", version = "0.8.0"}