[workspace]
members = ["sdk", "cli", "app", "py", "drive", "auth", "sdk/example"]

[workspace.package]
version = "0.7.2"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Tracy <tracy@tracycodes.com>",
    "Khalilnafis <khalil@genesysgo.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GenesysGo/shadow-drive-rust"
