[package]
name = "shadow-rpc-auth"
description = "Authenticate against RPCs that require JWT auth headers"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.58"
reqwest = "0.11.13"
log = "0.4.17"
tokio = {version = "^1", features = ["full"]}
serde = "1.0.151"
serde_json = "1.0.91"
solana-sdk = "1.10.34"
solana-client = "1.10.34"
solana-version = "1.10.34"
