[package]
name = "shadow-drive-cli"
description = "The Rust CLI for GenesysGo's Shadow Drive"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-drive-sdk = { path = "../sdk" }
shadow-rpc-auth = { path = "../auth" }
tokio = { version = "^1", features = ["full"] }
anyhow = "1.0.65"
byte-unit = "4.0.14"
chrono = "0.4.23"
solana-sdk = "1.14.11"
solana-client = "1.14.11"
solana-cli-config = "1.14.11"
solana-remote-wallet = "1.14.11"
reqwest = "0.11.12"
log = "0.4.17"
async-trait = "0.1.58"
itertools = "0.10.5"
uriparse = "0.6.4"
serde = "1.0.145"
serde_json = "1.0.86"
clap = { version = "3.1.18", features = [ "derive" ] }
solana-clap-v3-utils = "1.14.11"
