[package]
name = "shadow-drive-cli"
description = "The Rust CLI for GenesysGo's Shadow Drive"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-drive-sdk = { path = "../sdk", version = "0.7.1" }
shadow-rpc-auth = { path = "../auth", version = "0.7.1" }
shadow-nft-standard = { git = "ssh://git@github.com/genesysgo/shadow-nft-standard-internal", branch = "mvp"}
shadowy-super-minter = { git = "ssh://git@github.com/genesysgo/shadow-nft-standard-internal", branch = "mvp"}
tokio = { version = "^1", features = ["full"] }
anyhow = "1.0.65"
byte-unit = "4.0.14"
chrono = "0.4.23"
solana-sdk = "1.14.11"
solana-client = "1.14.11"
solana-cli-config = "1.14.11"
solana-remote-wallet = "1.14.11"
reqwest = "0.11.12"
log = "0.4.17"
async-trait = "0.1.58"
itertools = "0.10.5"
uriparse = "0.6.4"
serde = "1.0.145"
serde_json = "1.0.86"
clap = { version = "3.1.18", features = [ "derive" ] }
solana-clap-v3-utils = "1.14.11"
shellexpand = "3.1.0"
dirs = "5.0.1"
inquire = "0.6.2"
strum = { version = "0.24.1", features = ["derive"] }
rand = "0.8.5"
bincode = "1.3.3"
base64 = "0.21.2"
spl-associated-token-account = "1.1.3"
