[package]
name = "shadow-drive"
description = "GenesysGo Shadow Drive"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
