[package]
name = "shdw-drive-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-drive-rust = {path = ".."}

cryptohelpers = {version = "^2.0.0", features= ["async", "sha256"]}
hex = "0.4.3"
solana-sdk = "^1.9"
solana-client = "^1.9"
byte-unit = "^4"
tokio = {version = "1.18.2", features = ["full"]}
