[package]
name = "shadow-drive-py"
description = "The Python SDK for GenesysGo's Shadow Drive"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[lib]
name = "shadow_drive"
crate-type = ["cdylib"]

[dependencies]
concat-arrays = "0.1.2"
ed25519-dalek = "1.0.1"
ntapi = "0.4.1"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
reqwest = "0.11.14"
shadow-drive-sdk = { path = "../sdk/", version = "0.7.2" }
tokio = { version = "1.14.1", features = ["full"] }
tokio-scoped = "0.2.0"
