[package]
name = "runes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.26.0"
bytecheck = "0.7.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
rkyv = { version = "0.7.40", features = ["validation", "strict"] }
chain-drive = { git = "https://github.com/GenesysGo/shadow-drive-clockwork.git", features = ["cpi"]}
sha2 = "0.10.6"
