[package]
name = "test_utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "^0.24"
solana-sdk = "^1.9"
shadow-drive-user-staking = {version = "0.1.1", features = ["no-entrypoint"]}
solana-account-decoder = "^1.9"
serde_json = "^1"
solana-client = "^1.9"
