[package]
name = "shadow-drive-user-staking"
version = "1.1.1"
description = "Shadow Drive User Smart Contract"
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://shdw.genesysgo.com"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_drive_user_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["mainnet", "cpi"]
mainnet = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
spl-associated-token-account = "1.0.5"
hex = "0.4.3"
