[package]
name = "shdw-drive-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-drive-sdk = {path = ".."}

cryptohelpers = {version = "^2.0.0", features= ["sha256"], default-features=false}
hex = "0.4.3"
solana-client = "~1.14.16"
solana-sdk = "~1.14.16"
byte-unit = "^4"
tokio = {version = "^1", features = ["full"]}
tokio-stream = {version = "^0.1", features = ["fs"]}
futures = "^0.3"
lazy_static = "1.4"
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}